# pip-tools

./: .env  .gitignore  DEPLOY.md  Dockerfile  Procfile  README.md  ai_chat_app.py  ai_response_cli.py  ai_technical_analysis.py  analysis_agent-zero_20250113_192445.txt  api.py  auth.py  auth_middleware.py  chat_requirements.txt  creator_bid_autoreply.py  fundamental_analysis.py  fundamental_analysis_balanced.py  fundamental_analysis_optimistic.py  mech_query.py  package-lock.json  package.json  pyproject.toml  query_report.py  query_report_mech.py  render.yaml  requirements.txt  start.sh  ta_api_analysis.py  test_tools.py  test_tools.sh  tool_test.py  vercel.json  wsgi.py
Example mech tools/: ideas_for_tools.txt
Test/: package-lock.json  package.json
Test/backup/: ChatInterface.tsx  route.ts  server.js  socket.ts
app/: Dockerfile  main.py  render.yaml  requirements.txt
app/backtesting/: backtester.py  historical_data_builder.py  portfolio.py  query_database.py
app/models/: api.py
app/tools/: helpers.py
app/tools/LC_early_caller/: config.yaml  tool.py
app/tools/alt_rank_screener/: config.yaml  tool.py
app/tools/brian_transaction/: config.yaml  tool.py
app/tools/fundamental_analysis/: config.yaml  tool.py
app/tools/fundamental_analysis_venice/: config.yaml  tool.py
app/tools/future_predictor/: config.yaml  tool.py
app/tools/general_predictor/: __init__.py  config.yaml  tool.py
app/tools/limit_order_generator/: tool.py  (+2 more)
app/utils/: config.py  dotenv.py  errors.py  llm.py
archive/: crypto_ohlc.py  mech_tools.yaml  technical_analysis.py
chat-app-vite/: README.md  index.html  package-lock.json  package.json  vite.config.js
chat-app-vite/src/: App.css  App.jsx  index.css
chat-ui/: next.config.ts  package-lock.json  package.json
deployment/: Dockerfile  Dockerfile.render  autoreply.Dockerfile
mech_tools/: fundamental_analysis_mech.py  fundamental_analysis_trending_mech.py  tool_selector_mech.py  tool_test.py
static/css/: styles.css
static/js/: chat.js
templates/: index.html  login.html
(+52 files in other folders)
