[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["0xArdi <ardianabazi09@gmail.com>", "nic0xflamel <nicflamel0x@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.1.4"
numpy = "1.26.2"
ta = "0.10.2"
requests = "2.31.0"
python-dotenv = "1.0.0"
openai = "1.56.1"
httpx = "0.27.2"
pyyaml = "6.0.1"
fastapi = "0.108.0"
uvicorn = {extras = ["standard"], version = "0.25.0"}
pydantic = "2.5.2"
python-multipart = "0.0.6"
dune-client = "1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
