[tool.poetry]
name = "trading-tools-api"
version = "0.1.0"
description = "Trading Tools API with LiteLLM integration"
authors = ["Trading Tools Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.1.4"
pandas-ta = "^0.3.14b0"
numpy = "1.26.2"
ta = "0.10.2"
requests = "2.31.0"
python-dotenv = "1.0.0"
openai = "^1.61.0"
httpx = "0.27.2"
pyyaml = "6.0.1"
fastapi = "0.108.0"
uvicorn = {extras = ["standard"], version = "0.25.0"}
pydantic = "2.5.2"
python-multipart = "0.0.6"
dune-client = "1.3.0"
mplfinance = "0.12.10b0"
litellm = "^1.61.0"
anthropic = "^0.8.0"
google-generativeai = "^0.3.0"
matplotlib = "^3.8.0"
replicate = "^0.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"
ruff = "^0.0.270"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "B", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
